--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
     "bootstrap": "^4.5.0",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
+    "ngx-bootstrap": "^5.6.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
